Filters for scraping company name and logo added.

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,13 @@
 *.log
 *tmp/
 
+*.env
 *.tern-port
-*/node_modules/
+*node_modules/
 */npm-debug.log*
 *.tsbuildinfo
 *.npm
 *.eslintcache
+
+*env/
+*__pycache__/
